Create errorsClass and postCode.js remake ES8

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <label for="postcal_code" class="input-label"><span class="required-label">必須</span>郵便番号:</label>
         <input type="text" name="postal-code" class="input" id="postcal_code" autocomplete="postal-code"
           placeholder="郵便番号(ハイフン無)" required />
-        <span class="post-error-message"></span>
+        <span id="post-error-message"></span>
         <button id="postcal_search" type="button">住所検索</button>
       </div>
       <div class="input-box">
